styles/variables.css
body {
  /* COLORS */

  /* Principal Colors */
  --color-accent: #000;
  --color-accent-hover: #515151;
  --color-neutral-dark-100: #201f1f;
  --color-neutral-dark-200: #333;
  --color-neutral-grey-100: #807e7b;
  --color-neutral-grey-200: #9a9999;
  --color-neutral-light: #f9faf4;
  --color-star: #ed4b4f;
  --color-star-light: #af6b62;
  --color-star-light-hover: #c7989b;

  /* Second Tier Colors */
  --color-background: var(--color-neutral-light);
  --color-background-variant: var(--color-neutral-dark-100);
  --color-border: var(--color-neutral-dark-200);
  --color-border-variant: var(--color-neutral-light);
  --color-headline: var(--color-star);
  --color-headline-variant: var(--color-star-light);
  --color-highlighted: var(--color-neutral-dark-200);
  --color-highlighted-variant: var(--color-neutral-light);
  --color-icon: var(--color-neutral-dark-200);
  --color-icon-variant: var(--color-neutral-light);
  --color-icon-background: var(--color-neutral-grey-200);
  --color-link: var(--color-accent);
  --color-link-hover: var(--color-accent-hover);
  --color-link-variant: var(--color-star-light);
  --color-link-variant-hover: var(--color-star-light-hover);
  --color-text: var(--color-neutral-dark-200);
  --color-text-variant: var(--color-neutral-light);
  --color-text-small: var(--color-neutral-grey-100);
  --color-text-small-variant: var(--color-neutral-grey-200);
  --color-text-star: var(--color-star);

  /* SIZES */
  --breakpoint-width: 1400px;
  --border-radius: 8px; /* 8px */
  --box-shadow: 0 3px 5px -1px rgb(0 0 0 / 20%), 0 6px 10px 0 rgb(0 0 0 / 14%),
    0 1px 18px 0 rgb(0 0 0 / 12%);
  --gap-small: 8px;
  --gap-medium: 16px;
  --gap-large: 24px;
  --gap-extra-large: 42px;
  --header-height: 50px;
}

